duck/test/fail/contravariant_overload.duck
main = exit 0

f :: (a -> Int) -> Int
f g = g 0

_ = f \x -> x
